Mobile fix: reply box

--- a/scss/mobile/_reply.scss
+++ b/scss/mobile/_reply.scss
@@ -1,19 +1,21 @@
 #reply-control {
+  &.open {
+    max-height: 100vh;
+    min-height: 100vh;
+  }
+
   .btn-primary {
     margin-bottom: 0;
   }
 
   .category-input {
-    border-top: 1px solid color-chooser($white-divider, $black-divider);
-    padding-top: (($text-field-box-height - $btn-height) / 2);
-    padding-bottom: (($text-field-box-height - $btn-height) / 2);
-  }
+    margin-top: ($card-inner-spacer-y / 2);
+    padding-right: 0;
+    padding-left: 0;
 
-  .composer-bottom-right {
-    line-height: $btn-height-sm;
-    position: absolute;
-    right: 0;
-    bottom: $card-padding-y;
+    &:first-child {
+      margin-top: 0;
+    }
   }
 
   .contents {
@@ -52,42 +54,16 @@
     }
   }
 
-  .wmd-controls {
-    &.toolbar-visible {
-      .d-editor-button-bar {
-        background-color: transparent;
-        margin: 0;
-        width: 100%;
+  .grippie::before {
+    display: none;
+  }
 
-        button {
-          &.btn.no-text {
-            @extend %btn-sm;
+  .reply-to .composer-controls {
+    align-items: center;
+    display: flex;
+  }
 
-            margin: 0;
-            padding-right: ($btn-padding-x-sm / 2);
-            padding-left: ($btn-padding-x-sm / 2);
-          }
-        }
-      }
-
-      .d-editor-input {
-        border-top-width: ($btn-height-sm + $card-inner-spacer-y);
-        padding-top: 0;
-      }
-    }
-
-    .d-editor-container {
-      flex-direction: column;
-    }
-
-    .d-editor-input {
-      border-top-width: $card-inner-spacer-y;
-      flex-grow: 1;
-    }
-
-    .d-editor-textarea-wrapper {
-      display: flex;
-      flex-direction: column;
-    }
+  .title-and-category {
+    flex-direction: column;
   }
 }
