Mobile fix: topic list

--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -162,6 +162,10 @@
     margin-top: 0;
   }
 
+  .category-name {
+    line-height: inherit;
+  }
+
   .subcategories {
     margin-top: $spacer-xs;
 
