--- a/scss/mobile/_topic-list.scss
+++ b/scss/mobile/_topic-list.scss
@@ -1,3 +1,9 @@
+tr {
+  &.category-topic-link:last-child {
+    border-bottom: 0;
+  }
+}
+
 .categories-list .category-list {
   margin-bottom: 0;
   margin-left: 0;
@@ -20,7 +26,7 @@
     border-bottom: $table-border-width solid color-chooser($table-border-color-dark, $table-border-color-light);
     display: flex;
     min-height: $tbody-cell-height;
-    padding: $tbody-cell-padding-y ($tbody-cell-padding-x * 2);
+    padding: $tbody-cell-padding-y ($tbody-cell-padding-x * 2 - $btn-padding-x) $tbody-cell-padding-y ($tbody-cell-padding-x * 2);
 
     figure {
       @extend %typography-caption;
