--- a/scss/common/_search.scss
+++ b/scss/common/_search.scss
@@ -71,12 +71,19 @@
   input {
     &[type='date'],
     &[type='number'],
-    &[type='text'] {
+    &[type='text']:not(.user-selector) {
       @extend %text-field-box;
 
       display: inline-block;
       vertical-align: middle;
-      width: auto;
+    }
+  }
+
+  .search-bar {
+    align-items: center;
+
+    .btn {
+      @extend %btn-raised;
     }
   }
 }
@@ -85,6 +92,10 @@
   @extend %card;
 
   margin-bottom: $spacer-lg;
+
+  .container {
+    padding: $card-padding-y $card-padding-x 0;
+  }
 
   .search-advanced-btn {
     border-radius: $card-border-radius;
@@ -96,7 +107,7 @@
     @extend %card-block;
 
     border: 0;
-    padding-bottom: ($card-padding-y - $card-inner-spacer-y);
+    padding: 0;
 
     .control-group.pull-left {
       margin-bottom: $card-inner-spacer-y;
@@ -106,6 +117,10 @@
         padding-right: 0;
         padding-left: ($card-padding-x / 2);
       }
+    }
+
+    #postTime {
+      margin: 0 0 ($card-inner-spacer-y / 2);
     }
   }
 }
