Remove borders on topic admin dropdowm menu items

--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -791,6 +791,10 @@ nav {
         vertical-align: top;
       }
     }
+
+    .widget-button {
+      border-right: 0;
+    }
   }
 
   .topic-admin-popup-menu {
