--- a/scss/common/_badge.scss
+++ b/scss/common/_badge.scss
@@ -19,6 +19,10 @@
   color: inherit;
   padding-right: $chip-padding-x;
 
+  @include focus-hover {
+    color: inherit;
+  }
+
   &,
   &.box,
   &.bullet {
