--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -83,6 +83,10 @@
       margin-right: 0;
       margin-left: $header-inner-spacer-x;
 
+      @include focus-hover {
+        box-shadow: inset 0 0 1px currentColor;
+      }
+
       &.bullet {
         margin-top: 0;
       }
